rest/logs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs
spec:
  selector:
    matchLabels:
      app: logs
  replicas: 1
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
      - name: master
        image: gcr.io/datacenter-293401/logs-app:v1
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 7270
---
