rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 3
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: master
        image: gcr.io/datacenter-293401/rest-app:v1
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 6270
---
