rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 6270
      targetPort: 6270
  selector:
    app: rest
